# KalaMove

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  build_windows.bat  next_version_goals.md  project.kmake
_external_shared/KalaCLI/debug/: KalaCLI1d.lib  _KalaCLI1d.lib  kalaclid.lib
_external_shared/KalaCLI/docs/: build_from_source.md
_external_shared/KalaCLI/include/: command.hpp  core.hpp
_external_shared/KalaCLI/release/: KalaCLI1.lib  _KalaCLI1.lib  kalacli.lib
_external_shared/KalaHeaders/: file_utils.hpp  log_utils.hpp
debug/: CHANGES.md
docs/: ecosystem.md  external_libraries.md  how_to_use.md  why_use_kalamove.md
include/: command.hpp  core.hpp  move.hpp
src/: command.cpp  core.cpp  main.cpp  move.cpp
